# ownda-api-rs

./: .dockerignore  .envrc.example  .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.yml  sonar-project.properties
.github/: dependabot.yml
.github/workflows/: main.yml
config/: default.yml  local.yml
migrations/: 20211212232426_user.sql  20211212232931_account.sql  20211212233207_category.sql  20211212233357_transaction.sql  20211228125005_identity.sql
src/: db.rs  lib.rs  main.rs  routes.rs  settings.rs
src/domain/: error.rs  jwt.rs  mod.rs
src/domain/account/: create.rs  methods.rs  mod.rs
src/domain/category/: create.rs  methods.rs  mod.rs
src/domain/transaction/: create.rs  methods.rs
src/domain/user/: auth.rs  methods.rs  mod.rs
src/entity/: account.rs  category.rs  identity.rs  mod.rs  prelude.rs  sea_orm_active_enums.rs  transaction.rs  user.rs
src/gql/: context.rs  guard.rs  mod.rs
src/gql/resolvers/: account.rs  category.rs  identity.rs  mod.rs  transaction.rs  user.rs
