[package]
name = "ownda"
version = "0.1.0"
edition = "2021"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.4.4"
async-graphql-axum = "3.0.21"
anyhow = "1.0.53"
uuid = "0.8.2"
tower = "0.4.11"
jsonwebtoken = "7.2.0"
headers = "0.3.5"
serde_json = "1.0.74"
once_cell = "1.9.0"
argon2 = "0.3.2"
thiserror = "1.0.30"
config = "0.11.0"
env_logger = "0.9.0"
log = "0.4.14"

[dependencies.serde]
version = "1.0.133"
features = ["derive"]

[dependencies.async-graphql]
version = "3.0.21"
features = ["uuid", "chrono", "apollo_tracing", "log", "decimal"]

[dependencies.tokio]
version = "1.15.0"
features = ["full"]

[dependencies.sea-orm]
version = "0.5.0"
features = [
    "sqlx-postgres",
    "macros",
    "runtime-tokio-native-tls",
    "debug-print",
]
default-features = false
