[package]
name = "ownda"
version = "0.1.0"
edition = "2021"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.4.5"
async-graphql-axum = "3.0.29"
anyhow = "1.0.54"
uuid = "0.8.2"
tower = "0.4.12"
headers = "0.3.7"
serde_json = "1.0.79"
once_cell = "1.9.0"
argon2 = "0.3.4"
thiserror = "1.0.30"
env_logger = "0.9.0"
log = "0.4.14"

[dependencies.jsonwebtoken]
default-features = false
version = "8.0.1"

[dependencies.config]
default-features = false
version = "0.11.0"

[dependencies.serde]
version = "1.0.136"
features = ["derive"]

[dependencies.async-graphql]
version = "3.0.31"
features = ["uuid", "chrono", "apollo_tracing", "log", "decimal"]

[dependencies.tokio]
version = "1.16.1"
features = ["full"]

[dependencies.sea-orm]
version = "0.6.0"
features = [
    "sqlx-postgres",
    "macros",
    "runtime-tokio-native-tls",
    "debug-print",
]
default-features = false
